<resources>
    <string name="app_name">SingIn</string>
    <string name="oulupark">OuluPark</string>
    <string name="e_mail_adderes">E-mail adderes</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="please_add_your_email">Please add your email</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_nane">Please enter your last nane</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_confrim_your_password">Please confrim your password</string>
    <string name="sing_in">Sing in</string>
    <string name="title_activity_map">mapActivity</string>
    <string name="title_activity_directions">Directions</string>
    <string name="park">Park</string>
    <string name="track">Navigation</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>